<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/eddie_hall_500kg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/onboarding_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/onboarding_1_heading"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/onboarding_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/onboarding_1_text"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="127dp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:backgroundTint="@color/primary"
            android:text="@string/next" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/circleView"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/black" />

            <View
                android:id="@+id/circleView2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/secondary" />

            <View
                android:id="@+id/circleView3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/secondary" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>