<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_top"
                android:orientation="vertical">


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="74dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="258dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_weight="1"
                        android:text="@string/profile_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/heading_size"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="25sp"
                        android:layout_marginTop="40dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/settings_icon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="143dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="236dp"
                        android:layout_height="146dp"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/profile_image" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/hello"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/secondary_heading_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="BigStrongUser"
                            android:textColor="@color/black"
                            android:textSize="@dimen/secondary_heading_size"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="15dp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/social_count"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="28dp"
                            android:scaleX="0.5"
                            android:scaleY="0.5"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/email_icon" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="68dp"
                            android:layout_marginTop="4dp"
                            android:text="bigstronguser@stronghub.com"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30dp"
                            android:layout_weight="1"
                            android:buttonTint="@color/primary"
                            android:text="@string/enable_push_notifs_text" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />


                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />



            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sub_competitions_heading"
                android:textSize="@dimen/heading_size"
                android:textStyle="bold" />

            <com.seniru.stronghub.ui.SubscribedContestsView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:heading="Arnold Strongman Classic 2025"
                app:startDate="Starting on 2025-03-01" />
            <com.seniru.stronghub.ui.SubscribedContestsView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:heading="2025 Europe's Strongest Man"
                app:startDate="Starting on 2025-04-05" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/uploaded_media"
                android:textSize="@dimen/heading_size"
                android:textStyle="bold" />

            <com.seniru.stronghub.ui.MediaView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:username="BigStrongUser"
                app:views="4"
                app:imageUrl="@drawable/thor_deadlift"
                app:mediaTitle="Thor Bjornsson 501kg deadlift"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

        </LinearLayout>



    </ScrollView>
</RelativeLayout>